force-app/main/default/objects/PSO_Time_Entry__c/PSO_Time_Entry__c.object-meta.xml
<CustomObject>
    <label>Legacy PSO Time entry</label>
    <nameField>
        <displayFormat>PSO-TE-{0000000}</displayFormat>
        <label>PSO Time Entry #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legacy PSO Time entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>