force-app/main/default/objects/PSO_Time_Entry__c/fields/Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days__c</fullName>
    <formula>(End_Date__c - Start_Date__c )+1</formula>
    <label>Number of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>