force-app/main/default/objects/PSO_Time_Entry__c/fields/NumberofDays__c.field-meta.xml
<CustomField>
    <fullName>NumberofDays__c</fullName>
    <label>Number of Days(Hidden)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>