force-app/main/default/objects/PSO_Time_Entry__c/fields/PSO_Lookup__c.field-meta.xml
<CustomField>
    <fullName>PSO_Lookup__c</fullName>
    <label>PSO Lookup</label>
    <referenceTo>PSO__c</referenceTo>
    <relationshipName>PSO_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>